# Furious

./: .gitignore  Deploy.py  Main.py  README.md  Resources.qrc  Translation.py  pyproject.toml  requirements-nocore.txt  requirements.txt  setup.py
.github/workflows/: deploy-binaries.yml  deploy-pypi.yml  publish-winget.yml  wheels.yml
Furious/: Version.py  __init__.py  __main__.py
Furious/Action/: Connect.py  EditConfiguration.py  Exit.py  Export.py  Import.py  Language.py  Routing.py  Settings.py  __init__.py
Furious/Core/: Configuration.py  Core.py  CoreManager.py  CoreProcessWorker.py  Hysteria1.py  Hysteria2.py  Intellisense.py  TorRelay.py  Tun2socks.py  XrayCore.py  __init__.py
Furious/Frozenlib/: AppCommands.py  AppResources.py  AppSettings.py  Constants.py  Enum.py  Globals.py  Mixins.py  PySide6Legacy.py  StartupOnBoot.py  SystemProxy.py  SystemRoutingTable.py  SystemRuntime.py  Tcping.py  Utility.py  Win32Session.py  __init__.py
Furious/Gui/: Action.py  Icon.py
Furious/Interface/: Application.py  ApplicationFactory.py  ConfigFactory.py  ConfigurationFactory.py  CoreFactory.py  CoreProcessFactory.py  Encoder.py  EncoderFactory.py  GuiEditorItemFactory.py  ItemUpdateProtocol.py  Storage.py  StorageFactory.py  UserServersTableItem.py  __init__.py
Furious/PyFramework/: Ancestors.py  __init__.py
Furious/Qt/: AppStyleSheet.py  DNSResolver.py  DynamicTheme.py  DynamicTranslate.py  GuiEditorXXX.py  NetworkConnectivityManager.py  NetworkStateManager.py  QtGui.py  QtNetwork.py  QtWidgets.py  TextEditor.py  TextEditorTheme.py  UpdatesManager.py  WebGETManager.py  XrayAssetDownloadManager.py  __init__.py
Furious/QtFramework/: Ancestors.py  CoreProcess.py  DNSResolver.py  DynamicTheme.py  DynamicTranslate.py  GuiEditorXXX.py  NetworkStateManager.py  QtGui.py  QtNetwork.py  QtWidgets.py  TextEditor.py  TextEditorTheme.py  UpdatesManager.py  WebGETManager.py  XrayAssetDownloadManager.py  __init__.py
Furious/Storage/: UserServers.py  UserSubs.py  (+2 more)
Scripts/: Main.py
(+71 files in other folders)
